// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderList snapshot testing renders with back 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <BackButton
        white={true}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`HeaderList snapshot testing renders with isSearching true 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`HeaderList snapshot testing renders without data 1`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`HeaderList snapshot testing renders without data 2`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <CloseButton
        white={true}
      />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`HeaderList snapshot testing renders without data 3`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <SearchButton
        onPress={[Function]}
        visible={false}
      />
    </View>
  </View>
</View>
`;

exports[`HeaderList snapshot testing renders without data 4`] = `
<View>
  <View
    style={
      Object {
        "backgroundColor": "#1ea54f",
        "flexDirection": "row",
        "height": 70,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
    <View
      style={
        Array [
          Object {
            "flex": 4,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
          },
          undefined,
        ]
      }
    >
      <View />
    </View>
  </View>
</View>
`;
